// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppView when the app is installed should render the app view with configuration screen 1`] = `
<div>
  <div
    class="css-1cyywdw"
  />
  <div
    class="css-jwwzlh"
  >
    <div
      class="Typography__Typography___1ZUfE"
      data-test-id="cf-ui-text-container"
    >
      <h1
        class="Heading__Heading___83D3K css-acwcvw f36-margin-bottom--m"
        data-test-id="cf-ui-heading"
      >
        About Image Focal Point
      </h1>
      <p
        class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
        data-test-id="cf-ui-paragraph"
      >
        The Image Focal Point app allows you to associate focal point data with uploaded image assets, to achieve better cropping amongst different devices and screen sizes.
      </p>
      <hr
        class="css-14380qe"
      />
      <h1
        class="Heading__Heading___83D3K css-acwcvw f36-margin-bottom--m"
        data-test-id="cf-ui-heading"
      >
        Getting started
      </h1>
      <p
        class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
        data-test-id="cf-ui-paragraph"
      >
        Follow the next steps to create a new image entry with focal point data:
      </p>
      <ul
        class="List__List___1awv4 css-qslnu8"
        data-test-id="cf-ui-list"
      >
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Go to the "Content" page
        </li>
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Create a new entry of type "Image with Focal Point" (or the name you chose during the installation)
        </li>
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Fill in the required fields and publish it
        </li>
      </ul>
      <p
        class="Paragraph__Paragraph___2aO-9 css-15g2oxy f36-margin-bottom--m"
        data-test-id="cf-ui-paragraph"
      >
        Follow the next steps to reference the newly created image with focal point entry in another content type:
      </p>
      <ul
        class="List__List___1awv4 css-qslnu8"
        data-test-id="cf-ui-list"
      >
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Go to the "Content model" page
        </li>
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Edit the content type that needs to reference the image with the focal point
        </li>
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Create a new field of type "Reference"
        </li>
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Set a validation rule requiring that the content type the reference points to is of type "Image with Focal Point"
        </li>
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Optionally set the appearance of the new reference field to "Entry Card" in its settings
        </li>
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Go back to the "Content" page
        </li>
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Create/edit an entry of the content type referencing the image with the focal point
        </li>
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Set the reference field you added to point to the image with focal point entry
        </li>
      </ul>
      <hr
        class="css-14380qe"
      />
      <h1
        class="Heading__Heading___83D3K css-acwcvw f36-margin-bottom--m"
        data-test-id="cf-ui-heading"
      >
        Uninstallation and cleanup
      </h1>
      <p
        class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
        data-test-id="cf-ui-paragraph"
      >
        If you uninstall the Image Focal Point app you will have to manually clean up the content type we created for you during the installation. To do that follow the next steps:
      </p>
      <ul
        class="List__List___1awv4 css-qslnu8"
        data-test-id="cf-ui-list"
      >
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Go to the "Content" page
        </li>
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Delete any entries of type "Image with Focal Point" (or the name you chose during installation)
        </li>
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Go to the "Content model" page
        </li>
        <li
          class="ListItem__ListItem___3S9Oc"
          data-test-id="cf-ui-list-item"
        >
          Edit the content type the app created, select "Actions" from the top menu and "Delete"
        </li>
      </ul>
    </div>
  </div>
  <div
    class="css-13jvbbd"
  >
    <img
      alt="logo"
      src="app-logo.svg"
    />
  </div>
</div>
`;

exports[`AppView when the app is not installed should render inline validation if the content type id is taken 1`] = `
<div
  class="TextField__TextField___Sf6eo css-15g2oxy"
  data-test-id="content-type-name"
>
  <div
    class="TextField__TextField__label-wrapper___2-MJT"
  >
    <label
      class="FormLabel__FormLabel___3d6zQ"
      data-test-id="cf-ui-form-label"
      for="content-type-name"
    >
      Content type name
      <span
        class="FormLabel__FormLabel__required-text___3mvdm"
      >
        (
        required
        )
      </span>
    </label>
  </div>
  <div
    class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW TextInput__TextInput--negative___iVq__"
  >
    <input
      aria-label="contentTypeName"
      class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
      data-test-id="content-type-name-input"
      id="content-type-name"
      name="contentTypeName"
      placeholder="e.g. Image with Focal Point"
      required=""
      value="Image with Focal Point"
    />
  </div>
  <div
    class="ValidationMessage__ValidationMessage___3_rEq TextField__TextField__validation-message___1Idkl"
    data-test-id="cf-ui-validation-message"
  >
    <svg
      class="Icon__Icon___38Epv ValidationMessage__ValidationMessage__icon___3HPCh Icon__Icon--small___1yGZK Icon__Icon--negative___1dled"
      data-test-id="cf-ui-icon"
      height="18"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </svg>
    <p
      class="ValidationMessage__ValidationMessage__text___8FBj5"
    >
      A content type with ID "imageWithFocalPoint" already exists. Try a different name.
    </p>
  </div>
  <div
    class="TextField__TextField__hints___3Di2P"
  >
    <p
      class="HelpText__HelpText___uWbja TextField__TextField__help-text___p4rVf"
      data-test-id="cf-ui-help-text"
    >
      You can use this content type to wrap images with focal point data
    </p>
  </div>
</div>
`;

exports[`AppView when the app is not installed should render inline validation if the content type id is taken 2`] = `
<div
  class="TextField__TextField___Sf6eo css-15g2oxy"
  data-test-id="content-type-id"
>
  <div
    class="TextField__TextField__label-wrapper___2-MJT"
  >
    <label
      class="FormLabel__FormLabel___3d6zQ"
      data-test-id="cf-ui-form-label"
      for="content-type-id"
    >
      Content type ID
      <span
        class="FormLabel__FormLabel__required-text___3mvdm"
      >
        (
        required
        )
      </span>
    </label>
  </div>
  <div
    class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW TextInput__TextInput--negative___iVq__"
  >
    <input
      aria-label="contentTypeId"
      class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
      data-test-id="content-type-id-input"
      id="content-type-id"
      name="contentTypeId"
      required=""
      value="imageWithFocalPoint"
    />
  </div>
  <div
    class="ValidationMessage__ValidationMessage___3_rEq TextField__TextField__validation-message___1Idkl"
    data-test-id="cf-ui-validation-message"
  >
    <svg
      class="Icon__Icon___38Epv ValidationMessage__ValidationMessage__icon___3HPCh Icon__Icon--small___1yGZK Icon__Icon--negative___1dled"
      data-test-id="cf-ui-icon"
      height="18"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </svg>
    <p
      class="ValidationMessage__ValidationMessage__text___8FBj5"
    >
      A content type with ID "imageWithFocalPoint" already exists. Try a different ID.
    </p>
  </div>
  <div
    class="TextField__TextField__hints___3Di2P"
  >
    <p
      class="HelpText__HelpText___uWbja TextField__TextField__help-text___p4rVf"
      data-test-id="cf-ui-help-text"
    >
      The ID is generated from the name, you can also set it manually
    </p>
  </div>
</div>
`;

exports[`AppView when the app is not installed should render the app view with installation screen 1`] = `
<div>
  <div
    class="css-1cyywdw"
  />
  <div
    class="css-jwwzlh"
  >
    <div
      class="Typography__Typography___1ZUfE"
      data-test-id="cf-ui-text-container"
    >
      <h1
        class="Heading__Heading___83D3K css-acwcvw f36-margin-bottom--m"
        data-test-id="cf-ui-heading"
      >
        About Image Focal Point
      </h1>
      <p
        class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
        data-test-id="cf-ui-paragraph"
      >
        The Image Focal Point app allows you to associate focal point data with uploaded image assets, to achieve better cropping amongst different devices and screen sizes.
      </p>
      <hr
        class="css-14380qe"
      />
      <h1
        class="Heading__Heading___83D3K css-acwcvw f36-margin-bottom--m"
        data-test-id="cf-ui-heading"
      >
        Configuration
      </h1>
      <p
        class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
        data-test-id="cf-ui-paragraph"
      >
        To help you get started, we are going to create a content type for you with a title field, an image field and a focal point field.
      </p>
      <div
        class="TextField__TextField___Sf6eo css-15g2oxy"
        data-test-id="content-type-name"
      >
        <div
          class="TextField__TextField__label-wrapper___2-MJT"
        >
          <label
            class="FormLabel__FormLabel___3d6zQ"
            data-test-id="cf-ui-form-label"
            for="content-type-name"
          >
            Content type name
            <span
              class="FormLabel__FormLabel__required-text___3mvdm"
            >
              (
              required
              )
            </span>
          </label>
        </div>
        <div
          class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW"
        >
          <input
            aria-label="contentTypeName"
            class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
            data-test-id="content-type-name-input"
            id="content-type-name"
            name="contentTypeName"
            placeholder="e.g. Image with Focal Point"
            required=""
            value="Image with Focal Point"
          />
        </div>
        <div
          class="TextField__TextField__hints___3Di2P"
        >
          <p
            class="HelpText__HelpText___uWbja TextField__TextField__help-text___p4rVf"
            data-test-id="cf-ui-help-text"
          >
            You can use this content type to wrap images with focal point data
          </p>
        </div>
      </div>
      <div
        class="TextField__TextField___Sf6eo css-15g2oxy"
        data-test-id="content-type-id"
      >
        <div
          class="TextField__TextField__label-wrapper___2-MJT"
        >
          <label
            class="FormLabel__FormLabel___3d6zQ"
            data-test-id="cf-ui-form-label"
            for="content-type-id"
          >
            Content type ID
            <span
              class="FormLabel__FormLabel__required-text___3mvdm"
            >
              (
              required
              )
            </span>
          </label>
        </div>
        <div
          class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW"
        >
          <input
            aria-label="contentTypeId"
            class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
            data-test-id="content-type-id-input"
            id="content-type-id"
            name="contentTypeId"
            required=""
            value="imageWithFocalPoint"
          />
        </div>
        <div
          class="TextField__TextField__hints___3Di2P"
        >
          <p
            class="HelpText__HelpText___uWbja TextField__TextField__help-text___p4rVf"
            data-test-id="cf-ui-help-text"
          >
            The ID is generated from the name, you can also set it manually
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="css-13jvbbd"
  >
    <img
      alt="logo"
      src="app-logo.svg"
    />
  </div>
</div>
`;
